--- a/detail/detail4.html
+++ b/detail/detail4.html
@@ -8,7 +8,7 @@
 <body>
 <div id="wrap">
   <div id="header">
-    <h1><a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></h1>
+    <h1><a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></h1>
     <ul id="gnb">
       <li><a class="hover1" href="../detail/detail2.html">doggo</a></li>
       <li><a class="hover2" href="../detail/detail6.html">unlaunguged love</a></li>
@@ -29,11 +29,11 @@
         </p>
       </div>
       <div class="object">
-        <span class="img-wrap"><img src="../img/drawing/2023 (1).jpg" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2023 (2).jpg" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2023 (4).jpg" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2023 (5).jpg" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2023 (6).jpg" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(1).jpg?v=1689213700617" alt="원형1"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(2).jpg?v=1689213701427" alt="원형2"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(4).jpg?v=1689213704098" alt="원형3"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(5).jpg?v=1689213704873" alt="원형4"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(6).jpg?v=1689213705735" alt="원형5"></span>
         <div class="txt">
           <p>lee hyunsae, 원형, 2023. mixed media on papaer, 148 x 210mm.</p>
         </div>
@@ -41,7 +41,7 @@
     </div>
   </div>
   <div id="footer">
-    <a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></a>
+    <a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a>
     <p>copyright&copy;hyunsae</p>
   </div>
 </div>
