--- a/detail/detail1.html
+++ b/detail/detail1.html
@@ -8,7 +8,7 @@
 <body>
 <div id="wrap">
   <div id="header">
-    <h1><a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></h1>
+    <h1><a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></h1>
     <ul id="gnb">
       <li><a class="hover1" href="../detail/detail2.html">doggo</a></li>
       <li><a class="hover2" href="../detail/detail6.html">unlaunguged love</a></li>
@@ -28,7 +28,7 @@
         </p>
       </div>
       <div class="object">
-        <span class="img-wrap"><img src="../img/drawing/2023 (8).jpg" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(8).jpg?v=1689213611993" alt="나"></span>
         <div class="txt">
           <p>lee hyunsae, doggo, 2023. pencil on papaer, 148 x 210mm.</p>
         </div>
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div id="footer">
-    <a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo">
+    <a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo">
     <p>copyright&copy;hyunsae</p>
   </div>
 </div>
