--- a/detail/detail2.html
+++ b/detail/detail2.html
@@ -8,7 +8,7 @@
 <body>
 <div id="wrap">
   <div id="header">
-    <h1><a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></h1>
+    <h1><a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></h1>
     <ul id="gnb">
       <li><a class="hover1" href="../detail/detail2.html">doggo</a></li>
       <li><a class="hover2" href="../detail/detail6.html">unlaunguged love</a></li>
@@ -27,10 +27,10 @@
         </p>
       </div>
       <div class="object">
-        <span class="img-wrap"><img src="../img/drawing/2023 (3).jpg" alt="개머리"></span>
-        <span class="img-wrap"><img src="../img/drawing/2023 (7).jpg" alt="개전신"></span>
-        <span class="img-wrap"><img src="../img/drawing/illust (1).bmp" alt="개채색"></span>
-        <span class="img-wrap"><img src="../img/painting/painting (3).JPG" alt="페인팅개머리"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(3).jpg?v=1689213702626" alt="개머리"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(7).jpg?v=1689213611205" alt="개전신"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/illust%20(1).bmp?v=1689213618092" alt="개채색"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/painting(3).JPG?v=1689213725609" alt="페인팅개머리"></span>
 
         <div class="txt">
           <p>
@@ -45,16 +45,16 @@
           
         <div class="doggoanimation">
           <video autoplay loop autobuffer >
-            <source src="../img/animation/doggo.mp4" type="video/mp4">
+            <source src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/doggo.mp4?v=1689211925270" type="video/mp4">
           </video>
           <video class="doggowalking" autoplay loop autobuffer >
-          <source src="../img/animation/animation (2).mp4"  type="video/mp4">
+          <source src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/animation%20(2).mp4?v=1689211887647"  type="video/mp4">
           </video>
           <video class="doggosmocking" autoplay loop autobuffer >
-          <source src="../img/animation/animation (1).mp4" type="video/mp4">
+          <source src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/animation%20(1).mp4?v=1689211835160" type="video/mp4">
           </video>
           <video autoplay loop autobuffer>
-            <source src="../img/animation/dance (1).mp4" type="video/mp4">
+            <source src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/dance%20(1).mp4?v=1689211924159" type="video/mp4">
           </video>
 
           <div class="txt">
@@ -69,7 +69,7 @@
     </div>
   </div>
   <div id="footer">
-    <a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></a>
+    <a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a>
     <p>copyright&copy;hyunsae</p>
   </div>
 </div>
