--- a/detail/detail3.html
+++ b/detail/detail3.html
@@ -8,7 +8,7 @@
 <body>
 <div id="wrap">
   <div id="header">
-    <h1><a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></h1>
+    <h1><a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></h1>
     <ul id="gnb">
       <li></a></li>
       <li><a class="hover1" href="../detail/detail2.html">doggo</a></li>
@@ -28,8 +28,8 @@
      
       </div>
       <div class="object">
-        <span class="img-wrap"><img src="../img/logo/logo (1) - 1.png" alt="나"></span>
-        <span class="img-wrap"><img src="../img/logo/logo (3).jpg" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(1)-1.png?v=1689213716453" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(3).jpg?v=1689213715421" alt="나"></span>
         <div class="txt">
           <p>lee hyunsae, bird, 2023. pencil on papaer, 148 x 210mm.</p>
           <br><br>
@@ -39,7 +39,7 @@
 
         <div >
           <video class="birdanimation" autoplay loop autobuffer >
-            <source src="../img/animation/bird.mp4" type="video/mp4">
+            <source src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/bird.mp4?v=1689211917988" type="video/mp4">
           </video>
         
           <div class="txt">
@@ -54,7 +54,7 @@
   </div>
 
   <div id="footer">
-    <a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></a>
+    <a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a>
     <p>copyright&copy;hyunsae</p>
   </div>
 
