--- a/detail/detail5.html
+++ b/detail/detail5.html
@@ -8,7 +8,7 @@
 <body>
 <div id="wrap">
   <div id="header">
-    <h1><a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></a></h1>
+    <h1><a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a></h1>
    
     <ul id="gnb">
 
@@ -31,13 +31,13 @@
         </p>
       </div>
       <div class="object">
-        <span class="img-wrap"><img src="../img/drawing/2020-2 (1).png" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2020-2 (2).png" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2020-2 (3).png" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2020-3 (1).png" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2020-3 (2).png" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2020-3 (3).png" alt="나"></span>
-        <span class="img-wrap"><img src="../img/drawing/2020-3 (4).png" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2020-2(1).png?v=1689216189002" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2020-2(2).png?v=1689216196061" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2020-2(3).png?v=1689216202949" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2020-3(1).png?v=1689216208472" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2020-3(2).png?v=1689216216458" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2020-3(3).png?v=1689216226898" alt="나"></span>
+        <span class="img-wrap"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2020-3(4).png?v=1689216233991" alt="나"></span>
        
         <div class="txt">
           <p>lee hyunsae, -2021. mixed media. 420 x 594mm.</p>
@@ -46,7 +46,7 @@
     </div>
   </div>
   <div id="footer">
-    <a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></a>
+    <a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a>
     <p>copyright&copy;hyunsae</p>
   </div>
 </div>
