--- a/detail/detail6.html
+++ b/detail/detail6.html
@@ -8,7 +8,7 @@
 <body>
 <div id="wrap">
   <div id="header">
-    <h1><a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></h1>
+    <h1><a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></h1>
     <ul id="gnb">
       <li><a class="hover1" href="../detail/detail2.html">doggo</a></li>
       <li><a class="hover2" href="../detail/detail6.html">unlaunguged love</a></li>
@@ -35,7 +35,7 @@
           
         <div class="doggoanimation">
           <video autoplay loop autobuffer >
-            <source src="../img/animation/unlaguged love.mp4" type="video/mp4">
+            <source src="https://cdn.glitch.me/e9426c35-d659-4571-b341-98bc0d9fb4a1/unlaguged%20love.mp4?v=1689211880725" type="video/mp4">
           </video>
         
 
@@ -51,7 +51,7 @@
     </div>
   </div>
   <div id="footer">
-    <a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></a>
+    <a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a>
     <p>copyright&copy;hyunsae</p>
   </div>
 </div>
