--- a/detail/detail7.html
+++ b/detail/detail7.html
@@ -8,7 +8,7 @@
 <body>
 <div id="wrap">
   <div id="header">
-    <h1><a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></h1>
+    <h1><a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></h1>
     <ul id="gnb">
       <li><a class="hover1" href="../detail/detail2.html">doggo</a></li>
       <li><a class="hover2" href="../detail/detail6.html">unlaunguged love</a></li>
@@ -94,7 +94,7 @@
         </pre>
       </div>
       <div class="object">
-        <span class="img-wrap-poem"><img src="../img/drawing/제목 없음-1.png" alt="나"></span>
+        <span class="img-wrap-poem"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/%EC%A0%9C%EB%AA%A9%20%EC%97%86%EC%9D%8C-1.png?v=1689213619677" alt="나"></span>
       
         <div class="txt">
           <p></p>
@@ -103,7 +103,7 @@
     </div>
   </div>
   <div id="footer">
-    <a href="../index.html" class="logo-top"><img src="../img/logo/logo (2).png" alt="logo"></a>
+    <a href="../index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a>
     <p>copyright&copy;hyunsae</p>
   </div>
 </div>
