--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="wrap">
   <div id="header">
-    <h1><a href="index.html" class="logo-top"><img src="img/logo/logo (2).png" alt="logo"></a></h1>
+    <h1><a href="index.html" class="logo-top"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a></h1>
     <ul id="gnb">
       <li><a class="hover1" href="detail/detail2.html">doggo</a></li>
       <li><a class="hover2" href="detail/detail6.html">unlaunguged love</a></li>
@@ -28,20 +28,20 @@
         <div id="videowrap">
 
           <video class="mainvideo" autoplay loop playsinline autobuffer >
-            <source src="img/animation/animation (3).mp4" type="video/mp4">
+            <source src="https://cdn.glitch.me/e9426c35-d659-4571-b341-98bc0d9fb4a1/animation%20(3).mp4?v=1689211913815" type="video/mp4">
           </video> 
            <p class="logo">birds,doggo,archetypes</p>
 
       </div>
       <div class="section" id="portfolio">
         <ul class="portfolio-list">
-          <li><a href="detail/detail1.html"><img src="img/drawing/2023 (8)-2.png" alt="쌍방향 개"></a></li>
+          <li><a href="detail/detail1.html"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/2023(8)-2.png?v=1689213613765" alt="쌍방향 개"></a></li>
         </ul>
         <p class="section-txt">introduce</p>
       </div>
       <div class="section" id="profile">
         <ul class="img-wrap">
-          <li><a href="detail/detail7.html"><img src="img/logo/logo (1)-2.png" alt="쌍방향 새"></a></li>
+          <li><a href="detail/detail7.html"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(1)-2.png?v=1689213717244" alt="쌍방향 새"></a></li>
         </ul>
        
       </div>
@@ -57,7 +57,7 @@
   </div>
     </div>
   <div id="footer">
-    <a href="#" class="logo-bottom"><img src="img/logo/logo (2).png" alt="logo"></a>
+    <a href="#" class="logo-bottom"><img src="https://cdn.glitch.global/e9426c35-d659-4571-b341-98bc0d9fb4a1/logo(2).png?v=1689213714644" alt="logo"></a>
     <p>copyright&copy;hyunsae lee</p>
   </div>
 </div>
